# project-hands-off

./: .gitignore  ADDITIONAL_SANITIZATION_OPPORTUNITIES.md  ADMIN_EDITOR_SUMMARY.md  ADMIN_RICH_TEXT_EDITOR.md  AGENT_ERROR_INTEGRATION_COMPLETE.md  AI_CURSOR_HOVER_EFFECTS.md  AUTH_401_DURING_RUN_FIX.md  BACKEND_MCP_STATUS.md  BATCHING_SOLUTION_IMPLEMENTED.md  BLOCKING_FIX_CALLBACKS.md  BROKEN_RESOURCE_ERROR_FIX.md  BUILD_SCRIPTS_COMPLETE.md  BUILD_SCRIPTS_README.md  BUILD_SCRIPTS_SUMMARY.md  BUILD_SUCCESS.md  CANCEL_SCOPE_ERROR_SOLUTION.md  CHANGELOG.md  CHATINNER_ADDITIONAL_REFACTORING_OPPORTUNITIES.md  CHATINNER_FUNCTIONALITY_CHECKLIST.md  CHATINNER_PHASE1_COMPLETE.md  CHATINNER_REFACTORING_COMPLETE.md  CHATINNER_REFACTORING_PLAN.md  CHATINNER_REFACTORING_SUMMARY.md  CHATSESSIONCONTAINER_INTEGRATION_GUIDE.md  CHATSESSIONCONTAINER_REFACTORING_COMPLETE.md  CHATSESSIONCONTAINER_REFACTORING_PLAN.md  CHATSESSIONCONTAINER_REFACTORING_SUCCESS.md  CHAT_ERROR_DISPLAY_IMPLEMENTATION.md  CHAT_ERROR_DISPLAY_UPDATES.md  CHECKBOX_BORDER_UPDATE.md  CHILDREN_RENDER_PROPS_REFERENCE.md  CHROME_EXTENSION_RAILWAY_SETUP.md  CODEMIRROR_JSON_EDITOR.md  COMPLETE_EMBEDDING_IMPLEMENTATION.md  COMPLETE_RAILWAY_DEPLOYMENT.md  COMPLETE_REFACTORING_SUMMARY.md  COMPLETE_SHADOW_DOM_SUPPORT.md  COMPONENT_STABILIZATION.md  CONFIRMATION_CARD_COMPONENT.md  CONFIRM_ACTION_IMPLEMENTATION.md  (+228 more)
.claude/: launch.json
chrome-extension/: manifest.ts  package.json  vite.config.mts
copilotkit_crewai/: README.md  pyproject.toml  report.md
copilotkit_crewai/src/copilotkit_crewai/: crew.py  main.py
(+959 files in other folders)
